--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,15 +5,27 @@
     android:layout_height="fill_parent">
 
 
+    <Button android:layout_height="wrap_content"
+            android:id="@+id/ButtonStart"
+            android:text="@string/startNewTrip"
+            android:textStyle="bold"
+            android:layout_width="fill_parent"
+            android:drawableLeft="@drawable/bike"
+            android:layout_margin="8sp"
+            android:hapticFeedbackEnabled="true"
+            android:textSize="24sp">
+            </Button>
 
-<Button android:layout_height="wrap_content" android:id="@+id/ButtonStart" android:text="@string/startNewTrip" android:textStyle="bold" android:layout_width="fill_parent" android:drawableLeft="@drawable/bike" android:layout_margin="8sp" android:hapticFeedbackEnabled="true" android:textSize="24sp"></Button><TextView android:layout_height="wrap_content" android:id="@+id/TextViewPreviousTrips" android:text="@string/previous_trips" android:layout_width="fill_parent" android:gravity="center"></TextView><ListView android:layout_height="wrap_content" android:id="@+id/ListSavedTrips" android:layout_width="fill_parent"></ListView>
+    <TextView android:layout_height="wrap_content"
+              android:id="@+id/TextViewPreviousTrips"
+              android:text="@string/previous_trips"
+              android:layout_width="fill_parent"
+              android:gravity="center">
+              </TextView>
 
-
-
-
-
-
-
-
+    <ListView android:layout_height="wrap_content"
+              android:id="@+id/ListSavedTrips"
+              android:layout_width="fill_parent">
+              </ListView>
 
 </LinearLayout>
